# mlx_speech_to_text

./: .env.example  .gitignore  README.md  pyproject.toml  speech_to_text.sh
src/: README.md  main.py  requirements.txt
src/.cache/: .gitignore
src/speech_to_text/: __init__.py
src/speech_to_text/api/: __init__.py  connect.py  connect_chat.py  connect_copy copy.py  connect_copy.py  connect_status.py
src/speech_to_text/audio/: __init__.py  recorder.py
src/speech_to_text/chat/: __init__.py  chat_handler.py  chat_history.py
src/speech_to_text/config/: __init__.py  settings.py  text_optimizations.py
src/speech_to_text/docs/: Speech To Text Endpoints.md
src/speech_to_text/kokoro/: __init__.py  mlxw_to_kokoro.py
src/speech_to_text/llm/: __init__.py  file_handler.py  mlxw_to_llm.py
src/speech_to_text/transcriber/: __init__.py  whisper.py
src/speech_to_text/utils/: __init__.py  api_utils.py  logging.py  path_utils.py  transcription_utils.py
