[project]
name = "speech_to_text"
version = "0.1.0"
description = "Real-time speech-to-text transcription tool using MLX Whisper"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "mlx>=0.22.0",
    "mlx-whisper>=0.1.0",
    "numpy>=1.21.0",
    "PyAudio>=0.2.11",
    "pyperclip>=1.8.2",
    "openai>=1.59.6",
    "python-dotenv>=1.0.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/speech_to_text"]